# kedro-starters

pdm/: cookiecutter.json  local_extensions.py  prompts.yml
pdm/{{ cookiecutter.repo_name }}/: pyproject.toml
